update folk-body component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,3 +28,12 @@ body {
 .application-wrapper {
     background-color: red;
 }
+
+.folk-body {
+    height: auto;
+    width: 300px;
+}
+
+.display-none {
+    display: none;
+}
