add hidden-word component and it's basic logic

--- a/app/templates/play.hbs
+++ b/app/templates/play.hbs
@@ -4,3 +4,4 @@
 {{allGoodKeyPressed}} | 
 {{allWrongKeyPressed}} | 
 {{numberOfWrongKeyPressed}}
+{{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
