--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,25 +1,5 @@
-$primary-background-color: #264757;
-$primary-font-color: #d5d5d5;
-$application-width: 1200px;
-
-* {
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
-}
-
-html {
-	background-color: #1f2f3f;
-	color: $primary-font-color;
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	line-height: 1.5em;
-}
-
-body {
-    margin: 0 auto;
-    width: $application-width;
-}
+@import 'settings';
+@import 'components/index';
 
 .application-header {
     text-align: right;
@@ -27,11 +7,6 @@ body {
 
 .application-wrapper {
     background-color: red;
-}
-
-.folk-body {
-    height: auto;
-    width: 300px;
 }
 
 .display-none {
