add folk-body to play screen

--- a/app/templates/play.hbs
+++ b/app/templates/play.hbs
@@ -1,7 +1,9 @@
 <div id='tomasz'>Test</div>
 {{model}} | 
+{{wordLength}} | 
 {{allKeyPressed}} | 
 {{allGoodKeyPressed}} | 
 {{allWrongKeyPressed}} | 
 {{numberOfWrongKeyPressed}}
 {{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
+{{folk-body numberOfElementsToShow=numberOfWrongKeyPressed}}
