apply styles to hidden-word component

--- a/app/templates/play.hbs
+++ b/app/templates/play.hbs
@@ -1,9 +1,3 @@
-<div id='tomasz'>Test</div>
-{{model}} | 
-{{wordLength}} | 
-{{allKeyPressed}} | 
-{{allGoodKeyPressed}} | 
-{{allWrongKeyPressed}} | 
-{{numberOfWrongKeyPressed}}
-{{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
 {{folk-body numberOfElementsToShow=numberOfWrongKeyPressed}}
+{{allWrongKeyPressed}}
+{{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
