--- a/app/styles/components/_hidden-word.scss
+++ b/app/styles/components/_hidden-word.scss
@@ -1,5 +1,23 @@
 .hidden-word {
-    &__cover-letter {
-        background-color: yellow;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+
+    &__letter {
+        background-color: #464646;
+        border-radius: 10px; 
+        display: inline-block;
+        font-size: 50px;
+        height: 50px;
+        line-height: 1em;
+        margin: 0;
+        padding: 25px 15px;
+        text-align: center;
+        width: 50px;
+    }
+
+    &__slot-disabled {
+        background-color: #ccc;
     }
 }
