--- a/app/templates/components/hidden-word.hbs
+++ b/app/templates/components/hidden-word.hbs
@@ -1,3 +1,3 @@
 {{#each letters as |letter|}}
-    <div class={{if letter.isHidden 'hidden-word__cover-letter'}}>{{letter.letter}}</div>
+    <div class="hidden-word__letter {{if letter.isDisabled 'hidden-word__slot-disabled'}}">{{if letter.isVisible letter.letter}}</div>
 {{/each}}
