--- a/app/templates/play.hbs
+++ b/app/templates/play.hbs
@@ -1,3 +1,7 @@
-{{folk-body numberOfElementsToShow=numberOfWrongKeyPressed}}
-{{allWrongKeyPressed}}
-{{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
+<div class="play__wrapper">
+    <div class="play__top-container">
+        {{folk-body numberOfElementsToShow=numberOfWrongKeyPressed}}
+        {{allWrongKeyPressed}}
+    </div>
+    {{hidden-word word=model uncoveredLetters=allGoodKeyPressed}}
+</div>
