--- a/app/styles/components/_hidden-word.scss
+++ b/app/styles/components/_hidden-word.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around; 
+    justify-content: space-between;
+    margin: 50px; 
 
     &__letter {
         background-color: #464646;
@@ -12,7 +13,7 @@
         height: 50px;
         line-height: 1em;
         margin: 0;
-        padding: 25px 15px;
+        padding: 25px 20px;
         text-align: center;
         width: 50px;
     }
