--- a/app/styles/components/_hidden-word.scss
+++ b/app/styles/components/_hidden-word.scss
@@ -7,18 +7,20 @@
 
     &__letter {
         background-color: #464646;
-        border-radius: 10px; 
+        border-radius: 10px;
+        color: #f3f3f3; 
         display: inline-block;
-        font-size: 50px;
-        height: 50px;
+        font-size: 60px;
+        font-weight: bold;
+        height: 60px;
         line-height: 1em;
         margin: 0;
-        padding: 25px 20px;
+        padding: 20px;
         text-align: center;
         width: 50px;
     }
 
     &__slot-disabled {
-        background-color: #ccc;
+        background-color: #e8e8e8;
     }
 }
