style welcome screen

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'settings';
 @import 'components/index';
 @import 'play';
+@import 'welcome';
 
 .application-header {
     text-align: right;
