--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,3 +1,4 @@
-Welcome route
-{{folk-body numberOfElementsToShow=11}}
-{{link-to 'play' 'play' (query-params difficulty='medium')}}
+<div class="welcome__wrapper">
+    {{folk-body numberOfElementsToShow=11}}
+    {{game-menu}}
+</div>
