--- a/app/templates/components/game-menu.hbs
+++ b/app/templates/components/game-menu.hbs
@@ -1,5 +1,5 @@
 <div class="game-menu__header">Welcome to<br/>The Hangman Game</div>
 <div class="game-menu__item">Select game difficulty:</div>
-{{link-to 'easy' 'play' (query-params difficulty='easy') class="game-menu__link"}}
-{{link-to 'medium' 'play' (query-params difficulty='medium') class="game-menu__link"}}
-{{link-to 'hard' 'play' (query-params difficulty='hard') class="game-menu__link"}}
+{{#each gameModes as |gameMode|}}
+    {{link-to gameMode 'play' (query-params difficulty=gameMode) class="game-menu__link"}}
+{{/each}}
