--- a/app/styles/components/_game-menu.scss
+++ b/app/styles/components/_game-menu.scss
@@ -20,19 +20,22 @@
         text-transform: uppercase;
     }
 
+    &__link-wrapper {
+        display: block;
+        margin: 10px 0;
+        text-align: right;
+    }
+
     &__link,
     &__link:hover,
     &__link:visited,
     &__link:link,
     &__link:active {
         color: #0d83ea;
-        display: block;
         font-size: 25px;
         font-style: italic;
         font-weight: bold;
         line-height: 1em;
-        margin: 10px 0;
-        text-align: right;
         text-transform: uppercase;
     }
 
