update folk-bar svg

--- a/app/templates/components/folk-body.hbs
+++ b/app/templates/components/folk-body.hbs
@@ -1,4 +1,16 @@
-<img class="folk-body__bar" src="images/bar.png" />
+<svg id="bar" class="folk-body__bar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 224 38">
+  <defs>
+    <style>
+      .bar-cls-1 {
+        fill: #53555d;
+      }
+    </style>
+  </defs>
+  <title>folk-bar</title>
+  <rect class="bar-cls-1" width="208" height="16"/>
+  <rect class="bar-cls-1" x="190" width="34" height="16" rx="5" ry="5"/>
+  <rect class="bar-cls-1" x="474" y="393" width="34" height="16" rx="5" ry="5" transform="translate(601 -470) rotate(90)"/>
+</svg>
 <svg id="folk" class="folk-body__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 142 284.49">
   <defs>
     <style>
