bind end-screen with play route data

--- a/app/templates/components/end-screen.hbs
+++ b/app/templates/components/end-screen.hbs
@@ -1,2 +1,2 @@
-<div class="end-screen__title">GAME OVER</div>
+<div class="end-screen__title">{{message}}</div>
 <div><button {{action "restartGame"}}>Reset</button></div>
