--- a/app/styles/components/_end-screen.scss
+++ b/app/styles/components/_end-screen.scss
@@ -19,8 +19,24 @@
         line-height: 1em;
         text-transform: uppercase;
     }
-}
 
-.overflow-hidden {
-    overflow: hidden;
+    &__button {
+        background: 0;
+        border: 2px dashed #ffbc00;
+        border-radius: 30px;
+        color: #ffbc00;
+        cursor: pointer;
+        font-weight: bold;
+        font-size: 25px;
+        line-height: 1em;
+        margin: 10px 0;
+        padding: 15px 25px;
+        text-transform: uppercase;
+    }
+
+    &__button:hover,
+    &__button:active {
+        border-color: yellow;
+        color: yellow;
+    }
 }
