add background image

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,10 @@
 
 .application-wrapper {
     background-color: white;
+    background-image: url('background.svg');
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    background-size: 350px;
     border-radius: 10px;
     height: 750px;
     width: 1200px;
