--- a/app/styles/_play.scss
+++ b/app/styles/_play.scss
@@ -1,4 +1,25 @@
 .play {
+    &__header {
+        color: #0d83ea;
+        font-size: 60px;
+        font-weight: bold;
+        line-height: 1em;
+        margin-right: 50px;
+        text-align: right;
+        text-transform: uppercase;
+    }
+
+    &__level {
+        color: #ffbc00;
+        font-size: 30px;
+        font-weight: bold;
+        line-height: 1em;
+        margin-bottom: 50px;
+        margin-right: 50px;
+        text-align: right;
+        text-transform: uppercase;
+    }
+    
     &__wrapper {
         display: flex;
         flex-direction: column;
