--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,7 +1,3 @@
-$primary-background-color: #264757;
-$primary-font-color: #d5d5d5;
-$application-width: 1200px;
-
 * {
 	margin: 0;
 	padding: 0;
@@ -10,13 +6,12 @@ $application-width: 1200px;
 
 html {
 	background-color: #1f2f3f;
-	color: $primary-font-color;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	line-height: 1.5em;
+	line-height: 1em;
 }
 
 body {
     margin: 0 auto;
-    width: $application-width;
+    width: 1200px;
 }
