--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -5,8 +5,8 @@
 }
 
 html {
-	background-color: #1f2f3f;
-	font-family: 'Roboto', sans-serif;
+	background-color: #1a3e63;
+	font-family: 'Roboto', 'Noto', sans-serif;
 	font-size: 16px;
 	line-height: 1em;
 }
